Hero section added

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./css/style.css -o ./css/output.css --watch"
+    "build": "npx tailwindcss -i ./css/style.css -o ./css/output.css",
+    "dev": "npx tailwindcss -i ./css/style.css -o ./css/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "tailwindcss": "^3.4.19"
   }
