--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./css/style.css -o ./css/output.css --watch"
-  },
+  "build": "npx tailwindcss -i ./css/style.css -o ./css/output.css",
+  "dev": "npx tailwindcss -i ./css/style.css -o ./css/output.css --watch"
+},
+
+
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "devDependencies": {
     "tailwindcss": "^3.4.19"
   }
+  
+  
+
+
+  
 }
